---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\\documentclass{article}\n\n\\begin{document}\n\nBefore island.\n\n"
      }
    },
    {
      "type": "Island",
      "content": [
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "Within island. There can be inline code expression: "
          }
        },
        {
          "type": "InlinesBlock",
          "content": [
            {
              "type": "CodeExpression",
              "code": {
                "string": "1 + 2"
              }
            }
          ]
        },
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": ".\n\nAnd there can be block code chunk:\n\n"
          }
        },
        {
          "type": "CodeChunk",
          "code": {
            "string": "2 + 3\n"
          }
        },
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "\n"
          }
        }
      ]
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\nAfter island.\n\nIsland with id\n\n"
      }
    },
    {
      "type": "Island",
      "id": "tab:one",
      "content": [
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "Within the island with table id.\n\n"
          }
        }
      ],
      "labelType": "TableLabel"
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n"
      }
    },
    {
      "type": "Island",
      "id": "fig:one",
      "content": [
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "Within the island with figure id.\n\n"
          }
        }
      ],
      "labelType": "FigureLabel"
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\nIsland with options\n\n"
      }
    },
    {
      "type": "Island",
      "label": "7",
      "labelAutomatically": false,
      "content": [
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "Within the island with options.\n\n"
          }
        }
      ],
      "labelType": "TableLabel",
      "style": "some-style"
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\\end{document}\n"
      }
    }
  ],
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-latex/tests/examples/island.tex",
  "commit": "redacted"
}
